# fsl

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  install.sh  pyproject.toml
rust/: Cargo.toml  README.md  phase0-inventory.json
rust/fsl-core/: Cargo.toml
rust/fsl-core/src/: compose.rs  db.rs  diagnostics.rs  dialect.rs  domain.rs  domain_lowering.rs  expr_text.rs  lib.rs  model.rs  origin.rs  public_kernel.rs  refinement.rs  trace.rs  trace_json.rs  typecheck.rs
rust/fsl-core/tests/: action_correspondence.rs  action_parameters.rs  binder_aggregates.rs  conditional_expressions.rs  domain_lowering.rs  duplicate_writes.rs  enum_conversion.rs  governance_contract.rs  origin_chain.rs  public_kernel_v2.rs  requirements_stage.rs  typed_annotations.rs
rust/fsl-lsp/: Cargo.toml
rust/fsl-lsp/src/: index.rs  lib.rs  main.rs  server.rs
rust/fsl-lsp/tests/: corpus.rs  stdio.rs
rust/fsl-runtime/: Cargo.toml
rust/fsl-runtime/src/: explicit.rs  lib.rs
rust/fsl-runtime/tests/: action_correspondence.rs  bounded_liveness.rs  diagnostics.rs  explicit_engine.rs  monitor_regression.rs
rust/fsl-solver/: Cargo.toml
rust/fsl-solver-z3/: Cargo.toml
rust/fsl-solver-z3/src/: lib.rs
rust/fsl-solver-z3js/: Cargo.toml
rust/fsl-solver-z3js/src/: lib.rs
rust/fsl-solver/src/: lib.rs
rust/fsl-syntax/: Cargo.toml
rust/fsl-syntax/src/: ai.rs  annotation.rs  annotation_parse.rs  ast.rs  causal.rs  db.rs  dispatch.rs  domain.rs  lexer.rs  lib.rs  literate.rs  lossless.rs  parser.rs  surface.rs  syntax_expr.rs
rust/fsl-syntax/tests/: declaration_annotations.rs  dialect_declaration_annotations.rs  document_registry.rs  domain_typed_expressions.rs
rust/fsl-tools/: Cargo.toml
rust/fsl-tools/src/: ai.rs  analysis.rs  analysis_export.rs  analysis_graph.rs  causal.rs  causal_analysis.rs  causal_evidence.rs  causal_expectation.rs  causal_ledger_projection.rs  causal_plan.rs  causal_projection.rs  db.rs  db_import.rs  document.rs  document_check.rs  document_coverage.rs  document_digest.rs  document_evidence.rs  document_glossary.rs  document_markers.rs  document_presentation.rs  document_project.rs  document_render.rs  document_render_expr.rs  domain.rs  domain_codegen.rs  domain_naming.rs  html.rs  ledger.rs  lib.rs  mutate.rs  public_kernel.rs  refinement_analysis.rs  report.css  testgen.rs  testgen_dart.txt  testgen_kotlin.txt  testgen_php.txt  testgen_php_helpers.txt  testgen_swift.txt  (+3 more)
rust/fsl-tools/tests/: binder_aggregates.rs  conditional_analysis.rs  document.rs  document_approval.rs  document_coverage.rs  document_evidence.rs  document_glossary.rs  document_markers.rs  document_render.rs  domain_regression.rs  option_mutation.rs  refinement_correspondence.rs  typed_annotations.rs
rust/fsl-tools/tests/fixtures/: document_claims_fixture.fsl  document_kpi_fixture.fsl
rust/fsl-verifier/: Cargo.toml
rust/fsl-verifier/src/: agreement.rs  bmc.rs  eval.rs  induction.rs  lib.rs  liveness.rs  refinement.rs  trace.rs  transition.rs  value.rs
rust/fsl-verifier/tests/: expression_agreement.rs  leadsto_stagnation.rs  leadsto_within_deadline.rs  transition_agreement.rs
rust/fsl-wasm/: Cargo.toml  build.mjs  package-lock.json  package.json  parity.mjs  publish-docs.mjs  test-browser.mjs
rust/fsl-wasm/src/: lib.rs
rust/fsl-wasm/web/: cases.mjs  client.mjs  index.html  worker-entry.mjs  worker-protocol.mjs  z3-bridge.mjs
rust/fslc/: Cargo.toml  build.rs  cli-contract.json
rust/fslc/src/: approval.rs  causal.rs  code_audit.rs  coverage.rs  frontend_output.rs  lib.rs  main.rs  migration.rs  origin_coverage.rs  replay_trace.rs  source_diagnostic.rs  verification.rs  verification_output.rs
rust/fslc/tests/: analysis_conservation.rs  causal_cli.rs  causal_docs_contract.rs  causal_ownership.rs  cli_regression.rs  code_audit.rs  conformance_coverage.rs  db_direct_lowering.rs  document_approval_cli.rs  document_check_cli.rs  document_cli.rs  document_evidence_cli.rs  document_glossary_cli.rs  domain_codegen_contract.rs  domain_expression_characterization.rs  domain_origin_diagnostics.rs  edition_migrator.rs  engine_auto.rs  explicit_engine.rs  formatter_cli.rs  induction_lemmas.rs  induction_suggestions.rs  issue_189_undecided.rs  issue_190_approval.rs  issue_226_auto_engine.rs  issue_244_domain_enum.rs  issue_250_initialization.rs  issue_260_leadsto_stagnation.rs  issue_266_leadsto_within_deadline.rs  issue_333_approval_requirements_document.rs  issue_450_enum_conversion.rs  issue_450_sibling_enum_conversion.rs  issue_455_enum_abstraction.rs  issue_460_semantic_diff_forbidden.rs  kernel_contract.rs  literate_markdown.rs  lsp_diagnostic_contract.rs  mutation_docs_contract.rs  native_integration.rs  origin_coverage.rs  (+3 more)
rust/fslc/tests/fixtures/: action_correspondence_abs.fsl  action_correspondence_duplicate.fsl  conditional_const_type_error.fsl  conditional_type_error.fsl  conformance_coverage.v1.json  conformance_coverage.v1.md  conformance_coverage.v2.json  conformance_failures.fsl  conformance_failures.v1.json  conformance_failures.v2.json  domain_canonical_enum.fsl  domain_legacy_enum_union.fsl  domain_origin_violation.fsl  duplicate_write.fsl  explicit_deadlock.fsl  explicit_exclude_leadsto.fsl  explicit_finite_toggle.fsl  explicit_full_enum_keys.fsl  explicit_init_const_range.fsl  explicit_init_range_assigned.fsl  explicit_init_range_unassigned.fsl  explicit_init_state_collection.fsl  explicit_nondeterministic_init.fsl  explicit_noninductive.fsl  explicit_partial_map_key.fsl  explicit_partial_subrange.fsl  explicit_partial_where.fsl  explicit_property_narrow.fsl  explicit_reachable_unreachable_goal.fsl  explicit_reachable_witnessed.fsl  explicit_vacuous.fsl  governance_missing_dependency.fsl  induction_lemma_multi_cti.fsl  induction_lemma_mutual.fsl  induction_lemma_name_collision.fsl  (+39 more)
rust/spikes/z3js-worker/: README.md  bench.mjs  browser-main.mjs  browser-probe.mjs  browser-worker-entry.mjs  build-browser.mjs  package-lock.json  package.json  probe.mjs  serve-browser.mjs  solver.mjs  worker.mjs
(+823 files in other folders)
