[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fslc"
version = "1.0.2"
description = "FSL — AI-Native Formal Specification Language: a bounded model checker (Lark + Z3) designed for LLM write/verify/repair loops."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "lark>=1.1",
    "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
fslc = "fslc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
