[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fslc"
version = "2.5.0"
description = "FSL — AI-Native Formal Specification Language: a bounded model checker (Lark + Z3) designed for LLM write/verify/repair loops."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Ryoichi Izumita" },
]
keywords = [
    "formal-methods",
    "formal-specification",
    "model-checking",
    "bounded-model-checking",
    "refinement",
    "z3",
    "verification",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "lark>=1.1",
    "tomli; python_version < '3.11'",
    "z3-solver>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
lsp = ["pygls>=1.3,<2"]

[project.urls]
Homepage = "https://github.com/ymm-oss/fsl"
Repository = "https://github.com/ymm-oss/fsl"
Changelog = "https://github.com/ymm-oss/fsl/blob/main/CHANGELOG.md"
Issues = "https://github.com/ymm-oss/fsl/issues"

[project.scripts]
fslc = "fslc.cli:main"
fslc-lsp = "fslc.lsp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
