[package]
name = "fsl-core"
description = "FSL typed kernel lowering and semantic model"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
fsl-syntax = { path = "../fsl-syntax" }
serde_json.workspace = true

[lints]
workspace = true
