[package]
name = "fsl-solver-z3"
description = "Native Z3 4.16 backend for the FSL solver interface"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
fsl-solver = { path = "../fsl-solver" }
z3.workspace = true

[lints]
workspace = true
