[package]
name = "fsl-tools"
description = "Native FSL report generators and specialized dialect engines"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
fsl-core = { path = "../fsl-core" }
fsl-syntax = { path = "../fsl-syntax" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[lints]
workspace = true
