[package]
name = "fsl-wasm"
description = "Browser Web Worker entry point for FSL verification"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fsl-core = { path = "../fsl-core" }
fsl-runtime = { path = "../fsl-runtime" }
fsl-solver-z3js = { path = "../fsl-solver-z3js" }
fsl-verifier = { path = "../fsl-verifier" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

[lints]
workspace = true
